fix navbar overflow

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -18,6 +18,10 @@
     margin-top: 2.1rem !important;
 }
 
+.u-margin-top-medium {
+    margin-top: 4rem !important;
+}
+
 .u-margin-top-big {
     margin-top: 8rem !important;
 }
