--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,5 +1,5 @@
 .nav {
-    background-color: $color-white-2;
+    background-color: $color-white;
     box-shadow: 0 1rem 2rem rgba($color-black, .2);
 
     &__link {
